<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.brian.common.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
         />

    <com.brian.common.view.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/user_head_marginTop"
        android:src="@drawable/icon_default_user"
        app:border_color="#FFffffff"
        app:border_width="@dimen/circle_border_width" />

    <TextView
        android:id="@+id/blogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blogTV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="55dp" >

        <TableRow android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QQ群  :"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_size_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="194067225"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="@dimen/user_center_size_info" />
        </TableRow>

        <TableRow android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="github: "
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_size_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="https://github.com/brian512/CodeBlog"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_size_info" />
        </TableRow>

        <TableRow android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BLOG: "
                android:textColor="@color/black"
                android:textSize="@dimen/user_center_size_info" />

            <TextView
                android:id="@+id/blogLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textIsSelectable="true"
                android:text="@string/brian_blog"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/contact"
        android:layout_marginTop="20dp"
        android:text="欢迎大家的参与！"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/madeby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/madeby"
        android:textColor="@color/black" />

</RelativeLayout>